# PipelineX

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GITHUB_RELEASE_v2.0.0.md  GITHUB_RELEASE_v2.1.0.md  GITHUB_RELEASE_v2.1.1.md  GITHUB_RELEASE_v2.4.0.md  GITHUB_RELEASE_v2.4.1.md  IMPLEMENTATION_VERIFICATION.md  LICENSE  Makefile  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.4.1.md  SECURITY.md  docker-compose.selfhost.yml  docker-compose.yml  findings_report.md  install.sh  pipelinex-build-process.md  pipelinex-project.md  pipelinex-roadmap.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  ci_platform_request.md  feature_request.md
.github/workflow-templates/: pipelinex-analyze.yml  pipelinex-pr-comment.yml
.github/workflows/: ci.yml  docker.yml  pipelinex.yml
.pipelinex/: benchmark-registry.json
crates/pipelinex-cli/: Cargo.toml
crates/pipelinex-cli/src/: display.rs  main.rs
crates/pipelinex-core/: Cargo.toml
crates/pipelinex-core/src/: badge.rs  discovery.rs  explainer.rs  flaky_detector.rs  health_score.rs  lib.rs  mcp.rs  redact.rs  runner_sizing.rs  sbom.rs  signing.rs  test_selector.rs  whatif.rs
crates/pipelinex-core/src/analyzer/: cache_detector.rs  critical_path.rs  html_report.rs  mod.rs  parallel_finder.rs  report.rs  runner_sizer.rs  sarif.rs  waste_detector.rs
crates/pipelinex-core/src/cost/: mod.rs
crates/pipelinex-core/src/graph/: mod.rs
crates/pipelinex-core/src/linter/: deprecation.rs  mod.rs  schema.rs  typo.rs
crates/pipelinex-core/src/migration/: mod.rs
crates/pipelinex-core/src/multi_repo/: mod.rs
crates/pipelinex-core/src/optimizer/: cache_gen.rs  docker_opt.rs  mod.rs  parallel_gen.rs  shard_gen.rs
crates/pipelinex-core/src/parser/: argo.rs  aws_codepipeline.rs  azure.rs  bitbucket.rs  buildkite.rs  circleci.rs  dag.rs  drone.rs  github.rs  gitlab.rs  jenkins.rs  mod.rs  tekton.rs
crates/pipelinex-core/src/plugins/: mod.rs
crates/pipelinex-core/src/policy/: mod.rs
crates/pipelinex-core/src/providers/: github_api.rs  mod.rs
crates/pipelinex-core/src/security/: injection.rs  mod.rs  permissions.rs  secrets.rs  supply_chain.rs
crates/pipelinex-core/src/simulator/: mod.rs
crates/pipelinex-core/tests/: integration_tests.rs
dashboard/: Dockerfile  README.md  package-lock.json  package.json
docs/: ALERTS.md  EXPLAIN_WHATIF.md  GITHUB_API.md  GITHUB_APP_PR_ANALYSIS.md  INTEGRATIONS.md  INTEGRATION_SUMMARY.md  MIGRATION_ASSISTANT.md  MULTI_REPO_ANALYSIS.md  PLUGINS.md  QUICKSTART.md  REST_API.md  RUNNER_SIZING.md  SELF_HOSTING.md  VS_CODE_EXTENSION.md
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
(+91 files in other folders)
