[workspace]
members = ["crates/pipelinex-core", "crates/pipelinex-cli"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/mackeh/PipelineX"
homepage = "https://github.com/mackeh/PipelineX"
documentation = "https://github.com/mackeh/PipelineX#readme"
readme = "README.md"
keywords = ["ci-cd", "devops", "optimization", "pipeline", "github-actions"]
categories = ["command-line-utilities", "development-tools"]
description = "CI/CD Bottleneck Analyzer & Auto-Optimizer - Make your pipelines 2-10x faster"
authors = ["mackeh <mackeh2010@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
petgraph = "0.7"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
similar = "2"
glob = "0.3"
regex = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
