[package]
name = "pipelinex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core analysis engine for PipelineX CI/CD optimizer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
quick-xml = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
strsim = { workspace = true }
toml = { workspace = true }
